--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.wrapper {
+body {
     
     font-family: Arial, Helvetica, sans-serif;
     color: #777;
@@ -28,15 +28,21 @@ h1, p {
 }
 
 section {
-
+    width: 50%;
     float: left;
 }
 
 aside {
-
+    width: 50%;
     float: left;
 }
 
 footer {
+    
     clear: both;
+    
+}
+
+.wrapper {
+    box-sizing: border-box;
 }
