--- a/style.css
+++ b/style.css
@@ -1,48 +1,97 @@
+* {
+    background-color: gray;
+}
+
+
 body {
     
     font-family: Arial, Helvetica, sans-serif;
     color: #777;
-    width: 960px;
-    font-size: 18px;
-    text-align: center;
+    font-size: 18px;    
+    box-sizing: border-box;
+    text-align:center;
 
+}
+
+header {
+    height: 75px;
 }
 
 header, nav, section, aside, footer {
-
     background-color: #ebebeb;
+    
+    
 }
 
-article {
+.article {
 
     color: #ebebeb;
     background-color:#777;
-
+    margin:10px;
+    height:210px;
+    
 }
+
+nav{
+    margin-bottom: 10px;
+    height: 75px;
+}
+
 
 h1, p {
 
     color: #777;
     background-color: #ebebeb;
+    font-weight: none;
 
 }
 
 section {
-    width: 50%;
+    height: 300px;
+    width: 495px;
     float: left;
+    margin-bottom:10px;
 }
 
+.container {
+    margin-bottom: 10 px;
+
+}
+
+
 aside {
-    width: 50%;
-    float: left;
+    width: 445px;
+    height: 300px;
+    float: right;
+    margin-bottom: 10px;
 }
 
 footer {
-    
     clear: both;
+    margin-top: 20px;
+    height:75px
     
+}
+
+.multipleh {
+    margin: 10px;
+}
+h2 {
+   background-color: #ebebeb;
+   color:#777
 }
 
 .wrapper {
     box-sizing: border-box;
+    text-align: center;
+    margin: 0 auto;
+    width: 960px;
+    text-align: center;
+
+
 }
+
+.thep {
+    margin: 10px;
+}
+
