--- a/style.css
+++ b/style.css
@@ -4,17 +4,17 @@
 
 
 body {
-    vertical-align: middle;
     font-family: Arial, Helvetica, sans-serif;
     color: #777;
     font-size: 18px;    
     box-sizing: border-box;
     text-align:center;
-
+    margin: auto;
 }
 
 header {
     height: 75px;
+    margin: 10px 0px;
 }
 
 header, nav, section, aside, footer {
@@ -36,6 +36,8 @@ header, nav, section, aside, footer {
 nav{
     margin-bottom: 10px;
     height: 75px;
+    margin-top: 10px;
+
 }
 
 
@@ -44,6 +46,7 @@ h1, p {
     color: #777;
     background-color: #ebebeb;
     font-weight: none;
+    margin:0;
 
 }
 
@@ -75,7 +78,9 @@ footer {
 }
 
 .multipleh {
+    
     margin: 10px;
+    
 }
 h2 {
    background-color: #ebebeb;
@@ -94,5 +99,9 @@ h2 {
 
 .thep {
     margin: 10px;
+    margin-top: 90px;
 }
 
+article {
+    position:relative;
+}
